2003-07-16  Dennis Cranston <dennis_cranston at yahoo com>

	* at-enable-dialog.glade:  Make close the default button.

2003-07-16  Dennis Cranston <dennis_cranston at yahoo com>

	* at-enable-dialog.glade:  Adjust widget padding and remove
	separator per HIG.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-01  Daniel Baeyens <daniel.baeyens@hispalinux.es>
	* capplets/accessibility/at-properties/at-enable-dialog.glade:
	"Assistive" is misspelled.