@@ -1,3 +1,10 @@
+2003-07-18  Jonathan Blandford  <jrb@gnome.org>
+
+	* main.c: Add a check to confirm that the AT's are installed.  Add
+	a warning message if they are not.  Change widget naming scheme.
+
+	* at-enable-dialog.glade: Change widget naming scheme.
+
 2003-07-16  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* at-enable-dialog.glade:  Make close the default button.
